--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-24  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* pretty-print.h: Add macros from cp/error.c
+
 2002-07-24  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000-protos.h (mask_operand_wrap): Declare.
