* g++.dg/ext/alignof1.C (main): Return 0 for success.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55708 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-24  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* g++.dg/ext/alignof1.C (main): Return 0 for success.
+
 2002-07-24  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.c-torture/execute/memset-3.c: New testcase.
