--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 24 17:59:12 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (rest_of_compilation): Dump loops before clobbering
+	the structure.
+
 Wed Jul 24 17:23:16 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* rtlanal.c (keep_with_call_p): Avoid overflow in fixed_regs.
