* ra-colorize.c (INV_REG_ALLOC_ORDER): New macro.         (free_reg): Use it.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55721 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-24  Michael Matz  <matz@suse.de>
+
+	* ra-colorize.c (INV_REG_ALLOC_ORDER): New macro.
+	(free_reg): Use it.
+
 2002-07-24  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm.md (arm_buneq, arm_bltgt): put '\' before ';' in output
