In cp/ChangeLog: 	* tree.c (cp_build_qualified_type_real): When copying 	pointer-to-method types, unshare the record that holds 	the cached pointer-to-member-function type. In testsuite/ChangeLog: 	* g++.dg/other/ptrmem4.C: New testcase.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55725 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-07-24  Geoffrey Keating  <geoffk@redhat.com>
+
+	* tree.c (cp_build_qualified_type_real): When copying
+	pointer-to-method types, unshare the record that holds
+	the cached pointer-to-member-function type.
+
 2002-07-23  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cp-tree.h (FILE_FUNCTION_PREFIX_LEN): Remove.
