--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-24  Geoffrey Keating  <geoffk@redhat.com>
+
+	* g++.dg/other/ptrmem4.C: New testcase.
+
 2002-07-24  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/execute/loop-2e.c: Rewrite for 64 bit and no mmap.
